# brand-registration-fastapi-react

./: .gitignore  README.md
brand-api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
brand-api/app/: main.py
brand-api/app/application/dto/: brand_dto.py  user_dto.py
brand-api/app/core/: config.py  exceptions.py  limiter.py  middleware.py
brand-api/app/domain/entities/: brand.py  user.py
brand-api/app/domain/repositories/: brand_repository.py  user_repository.py
brand-api/app/domain/services/: brand_service.py  jwt_service.py  user_service.py
brand-api/app/domain/value_objects/: email.py
brand-api/app/infrastructure/database/: session.py
brand-api/app/presentation/schemas/: brand.py  user.py
brand-api/app/shared/enums/: brand_status.py
brand-api/docker/: docker-compose.yml
brand-api/migrations/: env.py
brand-api/migrations/versions/: 05c0e688583b_crear_esquema_con_uuids_para_user_y_.py  2bddface4119_update_pais_registro_for_null_or_empty_.py  2bfe0678401c_rename_estado_to_status_in_brands_table.py  34c97aa6e8bc_add_pais_registro_and_imagen_url_to_.py  4789723f66ca_add_pais_registro_and_imagen_url_to_.py  685ce2126ea3_set_default_for_pais_registro_to_.py  907d4e30b622_add_brandstatus_enum_type_to_brands_.py  90ad176b2cfb_add_pais_registro_and_imagen_url_to_.py  990780e527a7_add_hashed_password_to_user_table.py  bfa4bd0a7963_create_brands_table.py  dd6b0289564e_remove_default_from_pais_registro_column.py  f2d5d1a893da_update_existing_brands_pais_registro_to_.py
brand-api/scripts/: format.sh  start.sh  test.sh
(+80 files in other folders)
